tests/checker/bad/multiple_accepts.scilla
contract MultipleAccepts
()

transition donate()
  accept;
  accept
end
